--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -12,6 +12,7 @@ script: |-
 
   # Install Oracle JDK 8
   sudo add-apt-repository ppa:webupd8team/java -y
+  echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
   sudo apt-get update
   sudo apt-get install oracle-java8-installer -qq
   sudo apt-get install oracle-java8-set-default -y
